--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.24"
+hdf5 = "0.8.1"
 miette = { version = "5", features = ["fancy"] }
 nom = "7.1.3"
 nom-supreme = "0.8"
