--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 name = "can-parser"
 version = "0.1.0"
 edition = "2021"
-author = "Moritz Hüllmann"
-about = "Parses CAN log data to HDF5"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,8 +10,11 @@ about = "Parses CAN log data to HDF5"
 chrono = "0.4.24"
 clap = { version = "4.2.1", features = ["derive"] }
 hdf5 = "0.8.1"
+humansize = "2.1.3"
+log = "0.4.17"
 miette = { version = "5", features = ["fancy"] }
 nom = "7.1.3"
 nom-supreme = "0.8"
 nom_locate = "4"
+pretty_env_logger = "0.4.0"
 thiserror = "1.0.39"
